--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     let userAccount;
 
     const startApp = () => {
-        const contractSnakeReproduction = "0xAb816A0B6c8fBCdd98eecFC8C34B0B25A6b890ab";
-        const contractMarket = "0x3fA2E03D17dC4693d9b5Efc3835D1Cc4EA6EA350";
+        const contractSnakeOwnership = "0xB0aCfba148345314dD507c109643aC279dc84f82";
+        const contractMarket = "0xDb9d14BF67dFa5b7E350Adf9B8f580171e716286";
 
         cryptoSnakeReproduction = new window.web3.eth.Contract(snakeReproductionABI, contractSnakeReproduction);
         cryptoSnakeMarket = new window.web3.eth.Contract(snakeMarketABI, contractMarket);
