--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script type="text/javascript" src="./src/js/abi/snakeCreatorABI.js"></script>
     <script type="text/javascript" src="./src/js/abi/SnakeReproductionABI.js"></script>
     <script type="text/javascript" src="./src/js/abi/snakeOwnershipABI.js"></script>
-    <script src="src/js/abi/snakeMarketABI.js"></script>
+    <script type="text/javascript" src="./src/js/abi/snakeMarketABI.js"></script>
 
     <script type="text/javascript" src="./src/js/snakeCreator.js"></script>
     <script type="text/javascript" src="./src/js/SnakeReproduction.js"></script>
-    <script type="text/javascript" src="src/js/snakeMarket.js"></script>
-    <script type="text/javascript" src="src/js/snakeOwnership.js"></script>
+    <script type="text/javascript" src="./src/js/snakeMarket.js"></script>
+    <script type="text/javascript" src="./src/js/snakeOwnership.js"></script>
 
 
 
